# chatapp

tauri-app/: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  vite.config.js
tauri-app/src/: App.jsx
tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-app/src-tauri/src/: lib.rs
tauri-app/src-tauri/src/api/: chat.rs  chat_room.rs  chat_room_backup.rs  friend.rs  mod.rs  profile.rs  state.rs  user.rs
tauri-app/src-tauri/src/api/auth/: dto.rs  handlers.rs  jwt.rs  routes.rs
tauri-app/src-tauri/src/db/: init.rs
tauri-app/src-tauri/src/entities/: friends.rs  mod.rs  room_read.rs  users.rs
tauri-app/src-tauri/src/migration/: m2025_09_15_000001_init.rs  m2025_09_15_000002_recreate_users.rs  m2025_09_15_000003_add_profile_fields.rs  m2025_09_16_000004_room_read.rs  mod.rs
tauri-app/src-tauri/src/test/: tests.rs
tauri-app/src-tauri/tests/: login_hash_test.rs
tauri-app/src/pages/: Chat.jsx  Chats.jsx  Friends.jsx  Login.jsx  MyPage.jsx  Signup.jsx
tauri-app/src/route/: Router.jsx
tauri-app/src/styles/: chat.css  chats.css  friends.css  login.css
tauri-app/src/utils/: api.jsx  chatSse.js  friendApi.js  profileApi.js  roomApi.js  roomJoin.js  userApi.js
