[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15.7"
axum = "0.8.4"
sea-orm = { version= "1.1.15", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tokio = "1.47.1"
sea-query = "0.32.7"
sea-query-binder = "0.7.0"
argon2 = "0.5.3"

